--- a/principal.html
+++ b/principal.html
@@ -161,7 +161,7 @@
 <!--RODAPE DA PAGINA-->
 
     <footer class="rodape">
-        <h2 class="rodape__texto">Em breve mais coisas(ou não)</h2> 
+        <h2 class="rodape__texto">Em breve mais coisas</h2> 
     </footer>
 </body>
 </html>
